<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp"
    tools:context=".vistas.SingInScreen">

    <TextView
        android:id="@+id/txtTituloApp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/black"
        android:drawableTint="@color/black"
        android:foregroundTint="@color/black"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="#AD000000"
        android:ems="10"
        android:hint="@string/edtNombreSI"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="#AD000000"
        android:ems="10"
        android:hint="@string/edtPasswordSI"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="350dp"
        android:layout_height="62dp"
        android:layout_marginTop="316dp"
        android:background="#AD000000"
        android:ems="10"
        android:hint="@string/edtEmailSI"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtPasswordConfirm"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="#AD000000"
        android:ems="10"
        android:hint="@string/edtConfirmPassSI"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btSingConfirm"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/black"
        android:onClick="registrarUsuario"
        android:text="@string/edtSignInSI"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/black"
        android:onClick="cancelar"
        android:text="@string/btCancelSI"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
