<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp"
    tools:context=".vistas.MainScreen">

    <TextView
        android:id="@+id/txtTituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSingIn"
        android:layout_width="160dp"
        android:layout_height="63dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="@color/black"
        android:onClick="signinScreen"
        android:text="@string/btSignIn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloApp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="160dp"
        android:layout_height="63dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/black"
        android:onClick="loginScreen"
        android:text="@string/btLogIn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSingIn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="The best app to manage your business"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloApp"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>